@@ -1,4 +1,4 @@
-# Language, supported en, hu, fr, cz, nl ( send me translations! )
+# Language, supported en, hu, fr, cz, nl
 Locale: en
 
 # Check plugin update when server is starting
