@@ -1,0 +1,9 @@
+package net.diecode.KillerMoney;
+
+import org.bukkit.event.Listener;
+
+public class CommonEvents implements Listener {
+
+
+
+}
