@@ -2,6 +2,7 @@
 ---
 - Removed unused "Global-money-multiplier" option
 - "Config-processing when players in arena" renamed to "Disable-functions-when-player-is-fighting-in-arena" in config
+- Added daily limit to every mob
 
 3.3
 ---
